# depin-data-exchange

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  README.md  package-lock.json  package.json  tsconfig.json
gateway/: package-lock.json  package.json
gateway/src/: index.js
programs/exchange/: Cargo.toml
programs/exchange/src/: constants.rs  errors.rs  lib.rs
programs/exchange/src/instructions/: create_listing.rs  initialize.rs  mod.rs  query_data.rs  rate_listing.rs  register_provider.rs  renew_subscription.rs  subscribe.rs
programs/exchange/src/state/: config.rs  listing.rs  mod.rs  provider.rs  subscription.rs
quality-oracle/: .env.example  quality_oracle.py  requirements.txt
scripts/: init-devnet.ts
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: WalletButton.tsx  WalletChip.tsx  globals.css  idl.json  layout.tsx  page.tsx  providers.tsx
web/app/lib/: constants.ts  useProgram.ts
web/app/listing/[id]/: page.tsx
web/app/provider/: page.tsx
