[package]
name = "exchange"
version = "0.1.0"
description = "Marketplace for verified IoT and DePIN data"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
